updated admin panel

--- a/Frontend/webpage/dashboard.html
+++ b/Frontend/webpage/dashboard.html
@@ -35,16 +35,15 @@
                 <li><a href="">about</a></li>
                 <li><a href="">contact</a></li>
                 <li>
-                    <a id="cart" class="fas fa-shopping-cart"></a>
+                    <a id="cart" class="fas fa-shopping-cart "></a>
                 </li>
                 <li>
                     <div class="dropdown">
-                        <button id="btn-dropdown" class="dropbtn">Dropdown</button>
-                      
+                       
+                    <i id="btn-dropdown" class="fa fa-bars dropbtn fa-2x" ></i>
 
                         <div id="dropdown" class="dropdown-content">
-                            <a href="#home">Home</a>
-                            <a id="myorder">My Orders</a>
+                            <a id="myorder">Orders List</a>
                             <a id="logout">Logout</a>
                         </div>
                     </div>
