--- a/Frontend/webpage/home.html
+++ b/Frontend/webpage/home.html
@@ -48,10 +48,12 @@
             <li> <a href="#" class="fas fa-shopping-cart"></a></li>
             <li>
                 <div class="dropdown">
-                    <button id="btn-dropdown" class="dropbtn">Dropdown</button>
+                <i id="btn-dropdown" class="fa fa-bars dropbtn fa-2x"></i>
                     <div id="dropdown" class="dropdown-content">
-                
-                        <a id="logout">Logout</a>
+                <a id="profile">user</a>
+                <a id="dashboard">Dashboard</a>
+                <a id="myorder">My Orders</a>
+                <a id="logout">Logout</a>
                     </div>
                   </div>
             </li>
