--- a/Frontend/webpage/dashboard.html
+++ b/Frontend/webpage/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <title>Pet Park</title>
 
 
     <!-- 
@@ -32,8 +32,8 @@
             <ul id="navbar">
                 <li><a class="active" href="/home.html">home</a></li>
                 <li><a href="/services.html">services</a></li>
-                <li><a href="">about</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="about.html">about</a></li>
+                <li><a href="contact.html">contact</a></li>
                 <li>
                     <a id="cart" class="fas fa-shopping-cart "></a>
                 </li>
@@ -43,7 +43,6 @@
                     <i id="btn-dropdown" class="fa fa-bars dropbtn fa-2x" ></i>
 
                         <div id="dropdown" class="dropdown-content">
-                            <a id="myorder">Orders List</a>
                             <a id="logout">Logout</a>
                         </div>
                     </div>
