--- a/Frontend/webpage/services.html
+++ b/Frontend/webpage/services.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <title>Pet Park</title>
 
 
     <!-- 
@@ -32,8 +32,8 @@
             <ul id="navbar">
                 <li><a class="active" href="/home.html">home</a></li>
                 <li><a href="/services.html">services</a></li>
-                <li><a href="">about</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="/about.html">about</a></li>
+                <li><a href="/contact.html">contact</a></li>
                 <li>
                     <a id="cart" class="fas fa-shopping-cart"></a>
                 </li>
@@ -106,7 +106,7 @@
         </div>
 
     </section>
-    <div class="footer">&copy;<span> 2023 </span><span> Petpark. All rights reserved.</span></div>
+    <div class="footer">&copy;2023 Petpark. All rights reserved.</div>
     </div>
   
     <script src="js/jquery-2.1.4.min.js"></script>
