--- a/Frontend/webpage/signup.html
+++ b/Frontend/webpage/signup.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/signup.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <title>Pet Park</title>
 
     <body>
-        <body>
+      
             <img src="image/img/cutedog.png" class="login" />
             <div class="login-container">
             <h1>signup-here</h1>
