--- a/Frontend/webpage/snippets/adminpets.html
+++ b/Frontend/webpage/snippets/adminpets.html
@@ -5,7 +5,7 @@
 			
 	<section class="section-p2">
 				
-				<div id="pro-container">
+				<div id="pro-container" class="pro-container">
 				</div>
 	</section>
 	</section>
