--- a/Frontend/webpage/snippets/cart.html
+++ b/Frontend/webpage/snippets/cart.html
@@ -1,3 +1,4 @@
 <table id="cart-table">
+
 </table>
-<button id="btn-placeorder">Order</button>
+<div class="obt"> <button id="btn-placeorder" class="button-73 ">Order</button></div>
