--- a/Frontend/webpage/snippets/myorder.html
+++ b/Frontend/webpage/snippets/myorder.html
@@ -3,6 +3,8 @@
         <th>#</th>
         <th>Items</th>
         <th>Shipping Address</th>
+        <th>tax-price</th>
+        <th>Shipping-price</th>
         <th>Total amount</th>
     </tr>
 </table>
