--- a/Frontend/webpage/snippets/petfood.html
+++ b/Frontend/webpage/snippets/petfood.html
@@ -18,7 +18,7 @@
 			<legend>Select brand</legend>
 			<div id="filter-brands"></div>
 		</fieldset>
-		<div class="b12"> <button class="button-59" id="btn-filter-pets">Apply</button></div>
+		<div class="b12"> <button class="button-59" id="btn-filter-petfood">Apply</button></div>
 </section>
 	<section class="section-p2">
 		<h2 class="h2 section-title">
