--- a/Frontend/webpage/home.html
+++ b/Frontend/webpage/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Pet Food Website Design Tutorial</title>
+    <title>Pet Park</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -15,44 +15,20 @@
 </head>
 <body>
     
-<!-- header section starts  -->
 
-<!-- <header class="header">
-
-    <a href="#" class="logo"> <i class="fas fa-paw"></i> shop </a>
-
-    <nav class="navbar">
-        <a href="/">home</a>
-        <a href="#about">about</a>
-        <a href="services.html">services</a>
-        <a href="login.html">login</a>
-        <a href="signup.html">signup</a>
-    </nav>
-
-    <div class="icons">
-        <div class="fas fa-bars" id="menu-btn"></div>
-        <a href="#" class="fas fa-shopping-cart"></a>
-    </div> -->
-
-   
-<!-- 
-</header> -->
 <section id="header">
     <a href="#" class="logo"> <i class="fas fa-paw fa-3x" style="color: rgb(25, 209, 209);">pet park</i></a>
     <div>
         <ul id="navbar">
             <li><a class="active" href="home.html">home</a></li>
             <li><a href="services.html">services</a></li>
-            <li><a href="">about</a></li>
-            <li><a href="">contact</a></li>
+            <li><a href="about.html">about</a></li>
+            <li><a href="contact.html">contact</a></li>
             <li> <a href="#" class="fas fa-shopping-cart"></a></li>
             <li>
                 <div class="dropdown">
                 <i id="btn-dropdown" class="fa fa-bars dropbtn fa-2x"></i>
                     <div id="dropdown" class="dropdown-content">
-                <a id="profile">user</a>
-                <a id="dashboard">Dashboard</a>
-                <a id="myorder">My Orders</a>
                 <a id="logout">Logout</a>
                     </div>
                   </div>
