--- a/Frontend/webpage/login.html
+++ b/Frontend/webpage/login.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/login.css">
+	<title>Pet Park</title>
 
 	<body>
 			<img src="/image/img/login.png" class="login" />
