--- a/Frontend/webpage/snippets/admintoyitem.html
+++ b/Frontend/webpage/snippets/admintoyitem.html
@@ -1,8 +1,8 @@
 <div class="pro">
     <img src={{image}} alt="">
     <div class="des">
-        <span style="margin-bottom:1.5px">{{name}}</span>
-       <h4 style="margin:0px">{{price}}</h4>
+    <h2 style="margin-bottom:1.5px">{{name}}</h2>
+    <h4 style="margin:0px ;font-weight: 100;">price: ₹{{price}}</h4>
     </div>
 
     <button class ="fd-c btn-update" value={{id}}><i class="fas fa-edit"></i></button>
