--- a/Frontend/webpage/services.html
+++ b/Frontend/webpage/services.html
@@ -41,7 +41,7 @@
                     <div class="dropdown">
                         <i id="btn-dropdown" class="fa fa-bars dropbtn fa-2x"></i>
                         <div id="dropdown" class="dropdown-content">
-                            <a id="profile">user</a>
+                            <a id="profile">Profile</a>
                             <a id="dashboard">Dashboard</a>
                             <a id="myorder">My Orders</a>
                             <a id="logout">Logout</a>
